# lethaldfir-linux

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
docs/: README.md
lethaldfir_linux/: __init__.py  __main__.py  cli.py
lethaldfir_linux/core/: __init__.py  case.py  event.py  finder.py  utils.py
lethaldfir_linux/parsers/: __init__.py  aide.py  at_jobs.py  audit.py  auth_log.py  base.py  container_logs.py  cron.py  database_logs.py  faillog.py  firewall_logs.py  ftp_logs.py  history_files.py  host_metadata.py  journald.py  kernel_modules.py  lastlog.py  nfs_exports.py  packages.py  pam_config.py  passwd.py  passwd_backup.py  persistence.py  samba_logs.py  ssh.py  sudoers.py  syslog.py  systemd.py  web_error_logs.py  web_logs.py  wtmp.py
lethaldfir_linux/reports/: __init__.py  csv_report.py  html_report.py  json_report.py  timeline_csv.py  user_accounts_csv.py  xlsx_report.py
samples/: README.md
samples/example_output/: case.excerpt.json  findings.csv  report.html  timeline.csv  web01_LethalDFIR_Report.xlsx
