[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lethaldfir-linux"
version = "1.0.0"
description = "Offline Linux DFIR triage and timeline tool by LethalDFIR"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "LethalDFIR" },
]
keywords = ["dfir", "forensics", "linux", "incident-response", "timeline", "velociraptor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1.0"]
all  = ["openpyxl>=3.1.0"]

[project.scripts]
lethaldfir-linux = "lethaldfir_linux.cli:main"

[project.urls]
Homepage    = "https://lethaldfir.com"
Repository  = "https://github.com/lethaldfir/lethaldfir-linux"

[tool.setuptools.packages.find]
include = ["lethaldfir_linux*"]
exclude = ["tests*", "samples*", "docs*"]
